--- a/config/samples/kustomization.yaml
+++ b/config/samples/kustomization.yaml
@@ -1,4 +1,5 @@
 ## Append samples of your project ##
 resources:
 - etl_v1alpha1_pipeline.yaml
+# - etl_v1alpha1_pipeline_2.yaml
 # +kubebuilder:scaffold:manifestskustomizesamples
