--- a/.github/workflows/release-chart.yml
+++ b/.github/workflows/release-chart.yml
@@ -1,20 +1,26 @@
 name: Release Operator Chart
 
 on:
-  workflow_dispatch:
+  workflow_call:
     inputs:
       version_type:
         description: 'Version bump type'
         required: true
-        default: 'patch'
-        type: choice
-        options: 
-          - patch
-          - minor
-          - major
+        type: string
+    outputs:
+      new_version:
+        description: 'New Helm chart version'
+        value: ${{ jobs.calculate-version.outputs.new_version }}
 
 jobs:
+  calculate-version:
+    uses: ./.github/workflows/calculate-version.yml
+    with:
+      version_file: VERSION_CHART
+      version_type: ${{ inputs.version_type }}
+
   release:
+    needs: [calculate-version]
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -28,66 +34,11 @@ jobs:
     steps:
       - name: Checkout operator repo
         uses: actions/checkout@v5
-     
-      - name: Read helm chart version
-        id: helm-chart-version
-        run: |
-          if [ -f "VERSION_CHART" ]; then
-            HELM_CHART_VERSION=$(cat VERSION_CHART | tr -d ' \t\n\r')
-          else
-            HELM_CHART_VERSION="0.0.0"
-          fi
-          
-          echo "Helm chart version: $HELM_CHART_VERSION"
-          echo "helm-chart-version=$HELM_CHART_VERSION" >> $GITHUB_OUTPUT
-
-      - name: Calculate new helm chart version
-        id: version
-        run: |
-          # Parse version components
-          IFS='.' read -r MAJOR MINOR PATCH <<< "${{ steps.helm-chart-version.outputs.helm-chart-version }}"
-          echo "Parsed version - Major: $MAJOR, Minor: $MINOR, Patch: $PATCH"
-          
-          # Calculate new version based on input
-          VERSION_TYPE="${{ github.event.inputs.version_type }}"
-          echo "Version bump type: $VERSION_TYPE"
-          
-          case "$VERSION_TYPE" in
-            "major")
-              NEW_MAJOR=$((MAJOR + 1))
-              NEW_VERSION="$NEW_MAJOR.0.0"
-              echo "Major version bump: $MAJOR → $NEW_MAJOR"
-              ;;
-            "minor")
-              NEW_MINOR=$((MINOR + 1))
-              NEW_VERSION="$MAJOR.$NEW_MINOR.0"
-              echo "Minor version bump: $MINOR → $NEW_MINOR"
-              ;;
-            "patch")
-              NEW_PATCH=$((PATCH + 1))
-              NEW_VERSION="$MAJOR.$MINOR.$NEW_PATCH"
-              echo "Patch version bump: $PATCH → $NEW_PATCH"
-              ;;
-            *)
-              echo "❌ Invalid version type: $VERSION_TYPE"
-              exit 1
-              ;;
-          esac
-          
-          echo "✅ New version calculated: $NEW_VERSION"
-          echo "version=$NEW_VERSION" >> $GITHUB_OUTPUT
-          echo "NEW_VERSION=$NEW_VERSION" >> $GITHUB_ENV
-          
-          # Validate the new version
-          if [[ ! "$NEW_VERSION" =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
-            echo "❌ Invalid version format: $NEW_VERSION"
-            exit 1
-          fi
 
       - name: Update VERSION_CHART file
         run: |
-          echo "${{ steps.version.outputs.version }}" > VERSION_CHART
-          echo "✅ VERSION_CHART file updated to: ${{ steps.version.outputs.version }}"
+          echo "${{ needs.calculate-version.outputs.new_version }}" > VERSION_CHART
+          echo "✅ VERSION_CHART file updated to: ${{ needs.calculate-version.outputs.new_version }}"
           cat VERSION_CHART
 
       - name: Read operator version
@@ -111,13 +62,13 @@ jobs:
 
       - name: Generate and package chart
         run: |
-          make package-chart VERSION=${{ steps.version.outputs.version }} APP_VERSION=${{ steps.operator-version.outputs.operator-version }}
+          make package-chart VERSION=${{ needs.calculate-version.outputs.new_version }} APP_VERSION=${{ steps.operator-version.outputs.operator-version }}
 
       - name: Update operator chart in charts repo
         run: |
           cd charts-repo
           # Create release branch
-          git checkout -b "update-${{ env.OPERATOR_CHART_NAME }}-v${{ steps.version.outputs.version }}"
+          git checkout -b "update-${{ env.OPERATOR_CHART_NAME }}-v${{ needs.calculate-version.outputs.new_version }}"
 
           # Clean previous operator chart
           rm -rf charts/${{ env.OPERATOR_CHART_NAME }}/*
@@ -144,22 +95,22 @@ jobs:
             git add charts/${{ env.OPERATOR_CHART_NAME }}
 
             # Commit changes
-            git commit -m "feat: update ${{ env.OPERATOR_CHART_NAME }} to v${{ steps.version.outputs.version }}
+            git commit -m "feat: update ${{ env.OPERATOR_CHART_NAME }} to v${{ needs.calculate-version.outputs.new_version }}
 
-            - Operator version: ${{ steps.version.outputs.version }}
+            - Operator version: ${{ needs.calculate-version.outputs.new_version }}
             - Operator commit: ${{ github.sha }}"
             
             # Push the branch
-            git push origin "update-${{ env.OPERATOR_CHART_NAME }}-v${{ steps.version.outputs.version }}"
+            git push origin "update-${{ env.OPERATOR_CHART_NAME }}-v${{ needs.calculate-version.outputs.new_version }}"
             
       - name: Create PR to charts repo
         run: |
           cd charts-repo
           gh pr create \
-            --title "feat: update ${{ env.OPERATOR_CHART_NAME }} to v${{ steps.version.outputs.version }}" \
-            --body "Updates ${{ env.OPERATOR_CHART_NAME }} chart to version ${{ steps.version.outputs.version }}" \
+            --title "feat: update ${{ env.OPERATOR_CHART_NAME }} to v${{ needs.calculate-version.outputs.new_version }}" \
+            --body "Updates ${{ env.OPERATOR_CHART_NAME }} chart to version ${{ needs.calculate-version.outputs.new_version }}" \
             --base main \
-            --head "update-${{ env.OPERATOR_CHART_NAME }}-v${{ steps.version.outputs.version }}"
+            --head "update-${{ env.OPERATOR_CHART_NAME }}-v${{ needs.calculate-version.outputs.new_version }}"
 
       - name: Commit version changes
         run: |
@@ -171,9 +122,9 @@ jobs:
           git add VERSION_CHART
           
           # Commit the version bump
-          git commit -m "chore: bump version to ${{ steps.version.outputs.version }}
+          git commit -m "chore: bump version to ${{ needs.calculate-version.outputs.new_version }}
 
-          - Helm chart version: ${{ steps.version.outputs.version }}
+          - Helm chart version: ${{ needs.calculate-version.outputs.new_version }}
           - VERSION_CHART file updated" || echo "No changes to commit"
           
           # Push the changes
