--- a/.github/workflows/release-operator.yml
+++ b/.github/workflows/release-operator.yml
@@ -1,20 +1,26 @@
 name: Release Operator
 
 on:
-  workflow_dispatch:
+  workflow_call:
     inputs:
       version_type:
         description: 'Version bump type'
         required: true
-        default: 'patch'
-        type: choice
-        options:
-          - patch
-          - minor
-          - major
+        type: string
+    outputs:
+      new_version:
+        description: 'New operator version'
+        value: ${{ jobs.calculate-version.outputs.new_version }}
 
 jobs:
+  calculate-version:
+    uses: ./.github/workflows/calculate-version.yml
+    with:
+      version_file: VERSION
+      version_type: ${{ inputs.version_type }}
+
   release:
+    needs: [calculate-version]
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -22,6 +28,7 @@ jobs:
     env:
         REGISTRY: "ghcr.io/glassflow"
         IMAGE_NAME: "glassflow-etl-k8s-operator"
+      
     steps:
       - name: Checkout repository
         uses: actions/checkout@v5
@@ -41,69 +48,12 @@ jobs:
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Read current version
-        id: current-version
-        run: |
-          if [ -f "VERSION" ]; then
-            CURRENT_VERSION=$(cat VERSION | tr -d ' \t\n\r')
-          else
-            CURRENT_VERSION="0.0.0"
-          fi
-          
-          echo "Current version: $CURRENT_VERSION"
-          echo "current-version=$CURRENT_VERSION" >> $GITHUB_OUTPUT
-
-      - name: Calculate new version
-        id: new-version
-        run: |
-          CURRENT_VERSION="${{ steps.current-version.outputs.current-version }}"
-          
-          # Parse version components
-          IFS='.' read -r MAJOR MINOR PATCH <<< "$CURRENT_VERSION"
-          echo "Parsed version - Major: $MAJOR, Minor: $MINOR, Patch: $PATCH"
-          
-          # Calculate new version based on input
-          VERSION_TYPE="${{ github.event.inputs.version_type }}"
-          echo "Version bump type: $VERSION_TYPE"
-          
-          case "$VERSION_TYPE" in
-            "major")
-              NEW_MAJOR=$((MAJOR + 1))
-              NEW_VERSION="$NEW_MAJOR.0.0"
-              echo "Major version bump: $MAJOR → $NEW_MAJOR"
-              ;;
-            "minor")
-              NEW_MINOR=$((MINOR + 1))
-              NEW_VERSION="$MAJOR.$NEW_MINOR.0"
-              echo "Minor version bump: $MINOR → $NEW_MINOR"
-              ;;
-            "patch")
-              NEW_PATCH=$((PATCH + 1))
-              NEW_VERSION="$MAJOR.$MINOR.$NEW_PATCH"
-              echo "Patch version bump: $PATCH → $NEW_PATCH"
-              ;;
-            *)
-              echo "❌ Invalid version type: $VERSION_TYPE"
-              exit 1
-              ;;
-          esac
-          
-          echo "✅ New version calculated: $NEW_VERSION"
-          echo "new-version=$NEW_VERSION" >> $GITHUB_OUTPUT
-          echo "NEW_VERSION=$NEW_VERSION" >> $GITHUB_ENV
-          
-          # Validate the new version
-          if [[ ! "$NEW_VERSION" =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
-            echo "❌ Invalid version format: $NEW_VERSION"
-            exit 1
-          fi
+          password: ${{ github.token }}
 
       - name: Update VERSION file
         run: |
-          echo "${{ steps.new-version.outputs.new-version }}" > VERSION
-          echo "✅ VERSION file updated to: ${{ steps.new-version.outputs.new-version }}"
+          echo "${{ needs.calculate-version.outputs.new_version }}" > VERSION
+          echo "✅ VERSION file updated to: ${{ needs.calculate-version.outputs.new_version }}"
           cat VERSION
 
       - name: Build Docker image
@@ -111,41 +61,41 @@ jobs:
           echo "🐳 Building Docker image..."
           
           # Build and push the image with version tag
-          make docker-buildx IMG=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.new-version.outputs.new-version }}
+          make docker-buildx IMG=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ needs.calculate-version.outputs.new_version }}
           
           # Tag with latest and commit hash
-          docker tag ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.new-version.outputs.new-version }} ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
-          docker tag ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.new-version.outputs.new-version }} ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.new-version.outputs.new-version }}-${{ github.sha }}
+          docker tag ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ needs.calculate-version.outputs.new_version }} ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+          docker tag ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ needs.calculate-version.outputs.new_version }} ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ needs.calculate-version.outputs.new_version }}-${{ github.sha }}
           
           # Push all tags
           docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
-          docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.new-version.outputs.new-version }}-${{ github.sha }}
+          docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ needs.calculate-version.outputs.new_version }}-${{ github.sha }}
           
           echo "✅ Docker image built and tagged successfully"
 
       - name: Create GitHub release
         run: |
           # Create release
-          gh release create "v${{ steps.new-version.outputs.new-version }}" \
-            --title "Release v${{ steps.new-version.outputs.new-version }}" \
-            --notes "## 🚀 Operator Release v${{ steps.new-version.outputs.new-version }}
+          gh release create "v${{ needs.calculate-version.outputs.new_version }}" \
+            --title "Release v${{ needs.calculate-version.outputs.new_version }}" \
+            --notes "## 🚀 Operator Release v${{ needs.calculate-version.outputs.new_version }}
 
           ### 📦 Docker Images
-          - **Image**: \`${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.new-version.outputs.new-version }}\`
+          - **Image**: \`${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ needs.calculate-version.outputs.new_version }}\`
           - **Latest**: \`${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest\`
-          - **Commit**: \`${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.new-version.outputs.new-version }}-${{ github.sha }}\`
+          - **Commit**: \`${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ needs.calculate-version.outputs.new_version }}-${{ github.sha }}\`
 
           ### 📋 Installation
           ```bash
           # Pull the image
-          docker pull ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.new-version.outputs.new-version }}
+          docker pull ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ needs.calculate-version.outputs.new_version }}
           
           # Or use latest
           docker pull ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
           ```
 
           ### 📝 Changes
-          - Version bumped from \`${{ steps.current-version.outputs.current-version }}\` to \`${{ steps.new-version.outputs.new-version }}\`
+          - Version bumped to \`${{ needs.calculate-version.outputs.new_version }}\`
           - Docker images built and pushed with three tags: version, latest, and commit hash
           - VERSION file updated" \
             --latest
@@ -160,21 +110,11 @@ jobs:
           git add VERSION
           
           # Commit the version bump
-          git commit -m "chore: bump version to ${{ steps.new-version.outputs.new-version }}
+          git commit -m "chore: bump version to ${{ needs.calculate-version.outputs.new_version }}
 
-          - Version: ${{ steps.current-version.outputs.current-version }} → ${{ steps.new-version.outputs.new-version }}
+          - Version: ${{ needs.calculate-version.outputs.new_version }}
           - VERSION file updated
-          - Release: v${{ steps.new-version.outputs.new-version }}" || echo "No changes to commit"
+          - Release: v${{ needs.calculate-version.outputs.new_version }}" || echo "No changes to commit"
           
           # Push the changes
           git push origin ${{ github.ref }}
-
-      - name: Output summary
-        run: |
-          echo "🎉 Operator release completed successfully!"
-          echo "📦 Version: ${{ steps.current-version.outputs.current-version }} → ${{ steps.new-version.outputs.new-version }}"
-          echo "🐳 Docker images:"
-          echo "  - ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.new-version.outputs.new-version }}"
-          echo "  - ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest"
-          echo "  - ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.new-version.outputs.new-version }}-${{ github.sha }}"
-          echo "🔗 Release: https://github.com/${{ github.repository }}/releases/tag/v${{ steps.new-version.outputs.new-version }}"
