--- a/.github/workflows/release-chart.yml
+++ b/.github/workflows/release-chart.yml
@@ -25,6 +25,7 @@ jobs:
     permissions:
       contents: write
       pull-requests: write
+      id-token: write
     env:
         CHARTS_REPO: glassflow/charts
         OPERATOR_CHART_NAME: glassflow-operator
