--- a/.github/workflows/release-chart.yml
+++ b/.github/workflows/release-chart.yml
@@ -40,8 +40,9 @@ jobs:
         uses: actions/create-github-app-token@v2
         id: app-token
         with:
-          app-id: ${{ vars.APP_ID }}
+          app-id: ${{ secrets.APP_ID }}
           private-key: ${{ secrets.APP_PRIVATE_KEY }}
+          owner: ${{ github.repository_owner }}
           repositories: |
             charts
             glassflow-etl-k8s-operator
