--- a/.github/workflows/release-operator.yml
+++ b/.github/workflows/release-operator.yml
@@ -64,15 +64,32 @@ jobs:
           # Build and push the image with version tag
           make docker-buildx IMG=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ needs.calculate-version.outputs.new_version }}
           
-          # Tag with latest and commit hash
+          # Tag with latest, stable, and commit hash
           docker tag ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ needs.calculate-version.outputs.new_version }} ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+          docker tag ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ needs.calculate-version.outputs.new_version }} ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:stable
           docker tag ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ needs.calculate-version.outputs.new_version }} ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ needs.calculate-version.outputs.new_version }}-${{ github.sha }}
           
           # Push all tags
           docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+          docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:stable
           docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ needs.calculate-version.outputs.new_version }}-${{ github.sha }}
           
           echo "✅ Docker image built and tagged successfully"
+
+      - name: Security scan release image
+        uses: aquasecurity/trivy-action@master
+        with:
+          image-ref: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ needs.calculate-version.outputs.new_version }}
+          format: 'sarif'
+          output: 'trivy-release-results.sarif'
+          severity: 'CRITICAL,HIGH'
+
+      - name: Upload security scan results
+        uses: github/codeql-action/upload-sarif@v3
+        if: always()
+        with:
+          sarif_file: 'trivy-release-results.sarif'
+          category: 'Release Security Scan'
 
       - name: Create GitHub release
         run: |
@@ -84,12 +101,16 @@ jobs:
           ### 📦 Docker Images
           - **Image**: \`${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ needs.calculate-version.outputs.new_version }}\`
           - **Latest**: \`${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest\`
+          - **Stable**: \`${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:stable\`
           - **Commit**: \`${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ needs.calculate-version.outputs.new_version }}-${{ github.sha }}\`
 
           ### 📋 Installation
           ```bash
           # Pull the image
           docker pull ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ needs.calculate-version.outputs.new_version }}
+          
+          # Or use stable (recommended for production)
+          docker pull ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:stable
           
           # Or use latest
           docker pull ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
