--- a/.github/workflows/release-operator.yml
+++ b/.github/workflows/release-operator.yml
@@ -47,7 +47,7 @@ jobs:
       - name: Log in to Container Registry
         uses: docker/login-action@v3
         with:
-          registry: ${{ env.REGISTRY }}
+          registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ github.token }}
 
