--- a/.github/workflows/version-tag.yml
+++ b/.github/workflows/version-tag.yml
@@ -51,7 +51,7 @@ jobs:
         if: inputs.push_images == 'true'
         uses: docker/login-action@v3
         with:
-          registry: ${{ env.REGISTRY }}
+          registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ github.token }}
 
@@ -67,7 +67,7 @@ jobs:
 
       - name: Build and push versioned image
         if: inputs.push_images == 'true'
-        uses: docker/build-push-action@v5
+        uses: docker/build-push-action@v6
         with:
           context: .
           platforms: linux/amd64,linux/arm64
