improve release notification message and fix chart app version bump workflow

--- a/.github/workflows/chart-app-version-bump.yml
+++ b/.github/workflows/chart-app-version-bump.yml
@@ -35,5 +35,5 @@ jobs:
         uses: actions-js/push@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: ${{ github.head_ref }}
+          branch: 'main'
           message: "chore: bump chart app version to ${{ steps.version.outputs.version }}" 
