feat: update chart pipeline crd

--- a/charts/glassflow-operator/templates/pipeline-crd.yaml
+++ b/charts/glassflow-operator/templates/pipeline-crd.yaml
@@ -48,8 +48,26 @@ spec:
                 properties:
                   enabled:
                     type: boolean
+                  left_buffer_ttl:
+                    description: |-
+                      A Duration represents the elapsed time between two instants
+                      as an int64 nanosecond count. The representation limits the
+                      largest representable duration to approximately 290 years.
+                    format: int64
+                    type: integer
+                  nats_left_consumer_name:
+                    type: string
+                  nats_right_consumer_name:
+                    type: string
                   replicas:
                     minimum: 1
+                    type: integer
+                  right_buffer_ttl:
+                    description: |-
+                      A Duration represents the elapsed time between two instants
+                      as an int64 nanosecond count. The representation limits the
+                      largest representable duration to approximately 290 years.
+                    format: int64
                     type: integer
                   stream:
                     type: string
@@ -66,6 +84,8 @@ spec:
                 type: string
               sink:
                 properties:
+                  nats_consumer_name:
+                    type: string
                   replicas:
                     minimum: 1
                     type: integer
